Add missing translation for payment method class name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,7 @@
 en:
+  activerecord:
+    models:
+      spree/payment_method/bank_transfer: Bank transfer payments
   spree:
     holder: Holder
     iban: IBAN
